# goro-api

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
lib/: Cargo.toml
lib-unity/: Cargo.toml  libgoroapi_unity.h
lib-unity/src/: lib.rs
lib/src/: errors.rs  lib.rs
lib/src/cryptography/: encryption.rs  hashing.rs  mnemonic.rs  mod.rs
lib/src/cryptography/signatory/: mod.rs  private.rs  public.rs
templates/: Cargo.toml_aarch64  Cargo.toml_default  Cargo.toml_wasm  switch-cargo-deps
