[package]
name = "goro-api"
description = "GoRo Network - API Library"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = ["blake3/std"]
neon = ["blake3/neon"]
unity = ["std", "wasm"]
wasm = ["blake3/pure"]

[dependencies]
anyhow = { version = "1.0.71", default-features = false }
blake3 = { version = "1.3.3", default-features = false, optional = true }
thiserror = "1.0.40"
tiny-bip39 = { version = "1.0.0", default-features = false }
